--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -246,7 +246,7 @@
 		</dict>
 	</dict>
 	<key>Default Bookmark Guid</key>
-	<string>985790E0-F9EE-410A-8F77-222A4C39A7A6</string>
+	<string>871161D6-AB1C-4901-A81B-E71501494310</string>
 	<key>DimBackgroundWindows</key>
 	<true/>
 	<key>DimInactiveSplitPanes</key>
@@ -285,6 +285,8 @@
 	<integer>186</integer>
 	<key>HotkeyCode</key>
 	<integer>10</integer>
+	<key>HotkeyMigratedFromSingleToMulti</key>
+	<true/>
 	<key>HotkeyModifiers</key>
 	<integer>1048840</integer>
 	<key>IRMemory</key>
@@ -300,7 +302,7 @@
 	<key>MaxVertically</key>
 	<false/>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/Sites/iterm2-settings</string>
+	<string>~/iterm2-settings</string>
 	<key>NSNavPanelExpandedSizeForOpenMode</key>
 	<string>{712, 448}</string>
 	<key>NSQuotedKeystrokeBinding</key>
@@ -339,12 +341,16 @@
 		<key>TB Is Shown</key>
 		<integer>1</integer>
 	</dict>
+	<key>NSWindow Frame Preferences</key>
+	<string>269 197 606 456 0 0 1366 745 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
-	<string>330 289 620 392 0 0 1280 777 </string>
+	<string>373 265 620 392 0 0 1366 745 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>5 70 796 473 0 0 1280 777 </string>
+	<string>277 92 1016 512 0 0 1366 745 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 431 1920 626 0 0 1920 1057 </string>
+	<string>0 237 1366 508 0 0 1366 745 </string>
+	<key>NSWindow Frame iTerm Window 1</key>
+	<string>110 270 570 452 0 0 1366 745 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -536,6 +542,8 @@
 				<key>Red Component</key>
 				<real>0.76960963010787964</real>
 			</dict>
+			<key>Bound Hosts</key>
+			<array/>
 			<key>Character Encoding</key>
 			<integer>4</integer>
 			<key>Close Sessions On End</key>
@@ -590,7 +598,7 @@
 				<real>0.76960963010787964</real>
 			</dict>
 			<key>Guid</key>
-			<string>985790E0-F9EE-410A-8F77-222A4C39A7A6</string>
+			<string>871161D6-AB1C-4901-A81B-E71501494310</string>
 			<key>Hide After Opening</key>
 			<false/>
 			<key>Horizontal Spacing</key>
@@ -663,6 +671,13 @@
 					<integer>11</integer>
 					<key>Text</key>
 					<string>0x7f</string>
+				</dict>
+				<key>0x7f-0x80000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x17</string>
 				</dict>
 				<key>0xf700-0x220000</key>
 				<dict>
@@ -896,7 +911,7 @@
 			<key>Mouse Reporting</key>
 			<true/>
 			<key>Name</key>
-			<string>Guake Style</string>
+			<string>default</string>
 			<key>Non Ascii Font</key>
 			<string>SourceCodePro-Regular 15</string>
 			<key>Non-ASCII Anti Aliased</key>
@@ -1083,43 +1098,32 @@
 			<string>/Users/eduwass/Sites</string>
 		</dict>
 	</array>
+	<key>NoSyncCommandHistoryHasEverBeenUsed</key>
+	<true/>
+	<key>NoSyncDoNotWarnBeforePastingOneLineEndingInNewlineAtShellPrompt</key>
+	<true/>
+	<key>NoSyncDoNotWarnBeforePastingOneLineEndingInNewlineAtShellPrompt_selection</key>
+	<integer>0</integer>
+	<key>NoSyncHaveShownPromoWithId_4</key>
+	<true/>
 	<key>NoSyncHaveWarnedAboutPasteConfirmationChange</key>
 	<true/>
 	<key>NoSyncInstallationId</key>
-	<string>9E969A6A-EA3F-46BD-A60B-1F9FD7AFD5C3</string>
-	<key>NoSyncLastTipTime</key>
-	<real>501863209.93796301</real>
+	<string>BBC4F32B-5E24-417A-B6AD-EA1059BB7E98</string>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile</key>
 	<true/>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
 	<integer>0</integer>
 	<key>NoSyncPermissionToShowTip</key>
+	<false/>
+	<key>NoSyncSuppressAnnyoingBellOffer</key>
 	<true/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
-	<real>500410031.52762598</real>
-	<key>NoSyncTipsDisabled</key>
-	<true/>
-	<key>NoSyncTipsToNotShow</key>
-	<array>
-		<string>000</string>
-		<string>0000</string>
-		<string>0001</string>
-		<string>0002</string>
-		<string>0003</string>
-		<string>0004</string>
-		<string>0005</string>
-		<string>0006</string>
-		<string>0007</string>
-		<string>0008</string>
-		<string>0009</string>
-		<string>0010</string>
-		<string>0011</string>
-		<string>0012</string>
-		<string>0013</string>
-		<string>0014</string>
-		<string>0015</string>
-		<string>0016</string>
-	</array>
+	<real>486647336.25899202</real>
+	<key>NoSyncTimeOfLastPromo</key>
+	<real>477833266.75726402</real>
+	<key>NoSyncTimeOfLastPromoDownload</key>
+	<real>485492313.06031799</real>
 	<key>OnlyWhenMoreTabs</key>
 	<false/>
 	<key>OpenArrangementAtStartup</key>
@@ -1166,7 +1170,7 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>/Users/eduwass/Sites/iterm2-settings</string>
+	<string>/Users/allancarvalho/iterm2-settings</string>
 	<key>PromptOnQuit</key>
 	<false/>
 	<key>QuitWhenAllWindowsClosed</key>
@@ -1180,13 +1184,11 @@
 	<key>SUFeedAlternateAppNameKey</key>
 	<string>iTerm</string>
 	<key>SUFeedURL</key>
-	<string>https://iterm2.com/appcasts/testing.xml?shard=20</string>
+	<string>https://iterm2.com/appcasts/testing.xml?shard=41</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2017-02-03T01:15:25Z</date>
-	<key>SUSendProfileInfo</key>
-	<false/>
+	<date>2017-07-19T01:19:34Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
@@ -1247,6 +1249,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>3.0.14</string>
+	<string>3.1.beta.5</string>
 </dict>
 </plist>
